Bug 217449 - tooltips and previews hover crash [QCoreApplication::notifyInternal, QApplicationPrivate::dispatchEnterLeave, QApplication::x11ProcessEvent]
Summary: tooltips and previews hover crash [QCoreApplication::notifyInternal, QApplica...
Status: CLOSED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 217840 217941 218750 218751 218757 218799 218813 219017 219042 219079 219256 219324 219358 219448 219562 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-12-05 16:04 UTC by David Palacio
Modified: 2018-03-25 15:28 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Palacio 2009-12-05 16:04:49 UTC
Application: dolphin (1.3.80)
KDE Platform Version: 4.3.80 (KDE 4.3.80 (KDE 4.4 Beta1)) (Compiled from sources)
Qt Version: 4.6.0
Operating System: Linux 2.6.26-2-amd64 x86_64
Distribution: Debian GNU/Linux 5.0.3 (lenny)

-- Information about the crash:
Dolphin usually crashes in folders with subfolders (with images) while hovering over a subfolder.

Preview and tooltips activated.

The crash can be reproduced everytime.

 -- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault
[Current thread is 0 (LWP 11760)]

Thread 2 (Thread 0x413cf950 (LWP 11763)):
#0  0x00007f32f19b7b66 in poll () from /lib/libc.so.6
#1  0x00007f32ee4d0239 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007f32ee4d052c in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x00007f32f3a1e576 in QEventDispatcherGlib::processEvents (this=0x15697b0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:409
#4  0x00007f32f39f2512 in QEventLoop::processEvents (this=<value optimized out>, flags={i = 1094512720}) at kernel/qeventloop.cpp:149
#5  0x00007f32f39f28e4 in QEventLoop::exec (this=0x413cf090, flags={i = 1094512816}) at kernel/qeventloop.cpp:201
#6  0x00007f32f38fa847 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:487
#7  0x00007f32f39d2dc8 in QInotifyFileSystemWatcherEngine::run (this=0x160ef00) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f32f38fd425 in QThreadPrivate::start (arg=0x160ef00) at thread/qthread_unix.cpp:244
#9  0x00007f32f365dfc7 in start_thread () from /lib/libpthread.so.0
#10 0x00007f32f19c05ad in clone () from /lib/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f32f6b1e6f0 (LWP 11760)):
[KCrash Handler]
#5  QCoreApplication::notifyInternal (this=0x7fff17d032a0, receiver=0x1945dc0, event=0x7fff17d02780) at kernel/qcoreapplication.cpp:691
#6  0x00007f32f25ea541 in QApplicationPrivate::dispatchEnterLeave (enter=0x1945dc0, leave=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#7  0x00007f32f2669de1 in QApplication::x11ProcessEvent (this=0x7fff17d032a0, event=0x7fff17d02ee0) at kernel/qapplication_x11.cpp:3574
#8  0x00007f32f2694bc2 in x11EventSourceDispatch (s=0x1029cf0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#9  0x00007f32ee4ccaca in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#10 0x00007f32ee4d0368 in ?? () from /lib/libglib-2.0.so.0
#11 0x00007f32ee4d052c in g_main_context_iteration () from /lib/libglib-2.0.so.0
#12 0x00007f32f3a1e55c in QEventDispatcherGlib::processEvents (this=0xff4880, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:407
#13 0x00007f32f269475f in QGuiEventDispatcherGlib::processEvents (this=0x7fff17d032a0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#14 0x00007f32f39f2512 in QEventLoop::processEvents (this=<value optimized out>, flags={i = 399520208}) at kernel/qeventloop.cpp:149
#15 0x00007f32f39f28e4 in QEventLoop::exec (this=0x7fff17d03210, flags={i = 399520288}) at kernel/qeventloop.cpp:201
#16 0x00007f32f39f4df6 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#17 0x0000000000439b5d in main (argc=5, argv=0x7fff17d03788) at /home/kde/src/KDE/kdebase/apps/dolphin/src/main.cpp:94

Reported using DrKonqi
Comment 1 Dario Andres 2009-12-05 17:20:27 UTC
Mh, I can't reproduce the crash here using:

Qt: 4.6.0 (kde-qt master commit cd8595efe9aace2afdaa5db37af7cfe82b87e4aa
        Date:   Wed Nov 18 01:33:21 2009 +0100)
KDE Development Platform: 4.3.80 (KDE 4.3.80 (KDE 4.4 Beta1))
kdelibs svn rev. 1058633 / kdebase svn rev. 1058634
on ArchLinux i686 - Kernel 2.6.31.6

and the backtrace seems to be too much generic and Dolphin unrelated...
- Could you try this with a clean user account ? Do you remember some other non-standard option about the tooltips or the information panel ?
- Do you have some special tag or comment in the folder you are hovering ?
Thanks
Comment 2 David Palacio 2009-12-05 18:51:20 UTC
It certainly is tooltip related, as I deactivated it temporarily for this bug report.

There are no tags, as Nepomuk is not working here.

Something else about my setup. The forlder and subfolders have lots of high resolution images. So thumbnails take a while to appear. Something might be aborted or an object deleted while the tooltip appears or disappears.

So I created a new account. It crashed there as well. Now I caught something interesting. The last moment of Dolphin:

kio_thumbnail(13353)/kdecore (trader) KMimeTypeTrader::query: query for mimeType  "image/jpeg" ,  "ThumbCreator"  : returning  1  offers                   
kio_thumbnail(13353)/kdecore (trader) KMimeTypeTrader::query: query for mimeType  "image/jpeg" ,  "ThumbCreator"  : returning  1  offers                   
kio_thumbnail(13353)/kdecore (trader) KMimeTypeTrader::query: query for mimeType  "image/jpeg" ,  "ThumbCreator"  : returning  1  offers                   
kio_thumbnail(13353)/kdecore (trader) KMimeTypeTrader::query: query for mimeType  "image/jpeg" ,  "ThumbCreator"  : returning  1  offers                   
kio_thumbnail(13353)/kio (kioslave) KIO::SlaveBase::mimeType: "application/octet-stream"                                                                   
kio_thumbnail(13349)/kio (kioslave) KIO::SlaveBase::mimeType: "application/octet-stream"                                                                   
kio_thumbnail(13352) ThumbnailProtocol::get: Wanting MIME Type: "image/png"                                                                                
kio_thumbnail(13352) ThumbnailProtocol::get: Guess plugin:  "imagethumbnail"                                                                               
kio_thumbnail(13352)/kio (kioslave) KIO::SlaveBase::mimeType: "application/octet-stream"                                                                   
kio_thumbnail(13349) ThumbnailProtocol::get: Wanting MIME Type: "image/jpeg"                                                                               
kio_thumbnail(13349) ThumbnailProtocol::get: Guess plugin:  "jpegthumbnail"                                                                                
kio_thumbnail(13353) ThumbnailProtocol::get: Wanting MIME Type: "inode/directory"                                                                          
kio_thumbnail(13352) ThumbnailProtocol::get: Wanting MIME Type: "inode/directory"                                                                          
kio_thumbnail(13352)/kdecore (trader) KMimeTypeTrader::query: query for mimeType  "image/jpeg" ,  "ThumbCreator"  : returning  1  offers                   
kio_thumbnail(13353)/kdecore (trader) KMimeTypeTrader::query: query for mimeType  "image/jpeg" ,  "ThumbCreator"  : returning  1  offers                   
kio_thumbnail(13352)/kdecore (trader) KMimeTypeTrader::query: query for mimeType  "image/jpeg" ,  "ThumbCreator"  : returning  1  offers                   
kio_thumbnail(13353)/kdecore (trader) KMimeTypeTrader::query: query for mimeType  "image/jpeg" ,  "ThumbCreator"  : returning  1  offers                   
kio_thumbnail(13352)/kdecore (trader) KMimeTypeTrader::query: query for mimeType  "image/jpeg" ,  "ThumbCreator"  : returning  1  offers                   
kio_thumbnail(13353)/kdecore (trader) KMimeTypeTrader::query: query for mimeType  "image/jpeg" ,  "ThumbCreator"  : returning  1  offers                   
kio_thumbnail(13353)/kio (kioslave) KIO::SlaveBase::mimeType: "application/octet-stream"                                                                   
kio_thumbnail(13352)/kio (kioslave) KIO::SlaveBase::mimeType: "application/octet-stream"                                                                   
kio_thumbnail(13349)/kio (kioslave) KIO::SlaveBase::mimeType: "application/octet-stream"                                                                   
kio_thumbnail(13349)/kio (kioslave) KIO::SlaveBase::mimeType: read error                                                                                   
KCrash: Application 'dolphin' crashing...
Comment 3 Christoph Feck 2009-12-08 02:32:22 UTC
SVN commit 1060080 by cfeck:

Fix crash with tool tips enabled

Do not delete window inside the event handling, causing crashes with
queued events for the tool tip window.

This is the same fix that had been applied to systemsettings.

BUG: 217449


 M  +1 -1      ktooltip.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1060080
Comment 4 Dario Andres 2009-12-09 12:41:49 UTC
*** Bug 217840 has been marked as a duplicate of this bug. ***
Comment 5 Frank Reininghaus 2009-12-15 12:22:56 UTC
*** Bug 218750 has been marked as a duplicate of this bug. ***
Comment 6 Frank Reininghaus 2009-12-15 12:23:02 UTC
*** Bug 218751 has been marked as a duplicate of this bug. ***
Comment 7 Frank Reininghaus 2009-12-15 12:23:16 UTC
*** Bug 218757 has been marked as a duplicate of this bug. ***
Comment 8 Dario Andres 2009-12-15 16:32:46 UTC
*** Bug 218799 has been marked as a duplicate of this bug. ***
Comment 9 Dario Andres 2009-12-15 18:21:37 UTC
*** Bug 218813 has been marked as a duplicate of this bug. ***
Comment 10 Frank Reininghaus 2009-12-17 10:57:14 UTC
*** Bug 219042 has been marked as a duplicate of this bug. ***
Comment 11 Frank Reininghaus 2009-12-17 10:57:19 UTC
*** Bug 219017 has been marked as a duplicate of this bug. ***
Comment 12 Dario Andres 2009-12-17 16:12:15 UTC
*** Bug 219079 has been marked as a duplicate of this bug. ***
Comment 13 Dario Andres 2009-12-19 01:03:39 UTC
*** Bug 219256 has been marked as a duplicate of this bug. ***
Comment 14 Dario Andres 2009-12-20 20:08:05 UTC
*** Bug 219448 has been marked as a duplicate of this bug. ***
Comment 15 Dario Andres 2009-12-20 20:08:12 UTC
*** Bug 219324 has been marked as a duplicate of this bug. ***
Comment 16 Tommi Tervo 2009-12-21 16:14:56 UTC
*** Bug 219562 has been marked as a duplicate of this bug. ***
Comment 17 Julian Steinmann 2018-03-25 15:22:08 UTC
*** Bug 219358 has been marked as a duplicate of this bug. ***
Comment 18 Julian Steinmann 2018-03-25 15:28:47 UTC
*** Bug 217941 has been marked as a duplicate of this bug. ***