Fix crash with tool tips enabled

Do not delete window inside the event handling, causing crashes with
queued events for the tool tip window.

This is the same fix that had been applied to systemsettings.

BUG: 217449

svn path=/trunk/KDE/kdebase/apps/; revision=1060080